--- a/src/component/VideoScreen/VideoScreen.css
+++ b/src/component/VideoScreen/VideoScreen.css
@@ -1,7 +1,7 @@
 .video-body{
     width: 100%;
     height: 85vh;
-    background-color:black;
+    background-color:#202124;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -12,5 +12,5 @@
 .video{
     width: 70%;
     height: 90%;
-    background-color: rgb(40, 39, 39);
+    background-color: black;
 }
