--- a/src/component/popup/Popup.css
+++ b/src/component/popup/Popup.css
@@ -8,13 +8,17 @@
   left: 40px;
   bottom: 10px;
   height: 310px;
-  width: 320px;
+  width: 330px;
 }
 
 .card-head {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.cross:hover{
+  color: red;
 }
 
 .mid-btn {
@@ -50,6 +54,7 @@
 
 .btn-font {
   font-size: 0.9rem;
+  width: 97%;
 }
 
 
@@ -65,3 +70,4 @@
     font-size: 0.8rem;
     margin-left: 10px;
 }
+
