--- a/src/component/BottomTools/BottomTools.css
+++ b/src/component/BottomTools/BottomTools.css
@@ -1,66 +1,102 @@
-.bottom-body{
+.bottom-body {
+  width: 100%;
+  height: 15vh;
+  background-color: #202124;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: row;
+  align-items: center;
+}
+
+.left {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin-left: 20px;
+}
+
+.user-name p {
+  margin-left: 8px;
+}
+
+.middle {
+  flex: 2;
+  display: flex;
+  justify-content: center;
+}
+
+.icons {
+  border-radius: 50%;
+  padding: 10px;
+  margin-right: 10px;
+  background-color: #3e3e3f;
+  color: white;
+  cursor: pointer;
+}
+
+.icons-eight {
+  position: relative;
+}
+
+.eight {
+  right: 5px;
+  top: 0;
+  position: absolute;
+}
+.red {
+  background-color: red;
+}
+
+.right .icons {
+  background-color: #202124;
+}
+
+.right .icons:hover {
+  color: #0d6efd;
+}
+
+.right {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+@media only screen and (max-width: 780px) {
+  .bottom-body {
     width: 100%;
-    height: 15vh;
-    background-color: #202124;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    height: 20vh;
+  }
 
-.button-container{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: row;
-    align-items: center;
-
-}
-
-.left{
-    flex: 1;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    margin-left: 20px;
-}
-
-.user-name p{
-    margin-left: 8px;
-}
-
-.middle{
-    flex: 2;
-    display: flex;
-    justify-content: center;
-}
-
-.icons{
-    border-radius: 50%;
+  .button-container {
     padding: 10px;
-    margin-right: 10px ;
-    background-color: #3e3e3f;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .left {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .button-container {
+    flex-direction: column;
+  }
+
+  .icons {
+    margin-top: 30px;
+    height: 50px;
     color: white;
     cursor: pointer;
-}
-
-.red{
-    background-color: red;
-}
-
-
-.right .icons{
-    background-color: #202124;
-}
-
-.right .icons:hover{
-    color: #0d6efd;
-}
-
-
-.right{
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
+  }
 }
