--- a/src/component/VideoScreen/VideoScreen.css
+++ b/src/component/VideoScreen/VideoScreen.css
@@ -1,16 +1,35 @@
-.video-body{
-    width: 100%;
-    height: 85vh;
-    background-color:#202124;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+.video-body {
+  width: 100%;
+  height: 85vh;
+  background-color: #202124;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
-.video{
-    width: 70%;
-    height: 90%;
-    background-color: black;
+.video {
+  width: 70%;
+  height: 90%;
+  background-color: black;
+}
+
+@media only screen and (max-width: 780px) {
+    .video-body{
+        height: 80vh;
+        width: 100%;
+    }
+
+    .video{
+        width: 90%;
+    }
+
+}
+
+@media only screen and (max-width: 650px) {
+    .video-body{
+        height: 70vh;
+        width: 100%;
+    }
 }
